Notebook update - merge data/print data

--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -33,6 +33,12 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "- Daten vorbereiten & alle nötigen Libaries laden\n",
+   "id": "f13f66d913c5b24b"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-25T21:15:16.512199Z",
@@ -64,7 +70,9 @@
    "metadata": {},
    "source": [
     "### 3. Data Preparation\n",
-    "Dataset loading"
+    "- Dataset laden\n",
+    "- Hier werden die .csv-Dateien geladen:\n",
+    "- Tweets.csv enthält Tweets über Tesla (z. B. Datum, Text, Sentiment)"
    ]
   },
   {
@@ -88,66 +96,79 @@
    "execution_count": 6
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50835b8f71fce85c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Platzhalter: Sentimentanalyse vorbereiten\n",
-    "# z. B. Huggingface Transformers laden und Tweets analysieren"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f6511cf8e04bf499",
    "metadata": {},
    "source": [
-    "### 4. Modelling\n",
-    "- Korrelation analysieren\n",
-    "- Optional: Klassifikation ↑/↓ mittels Logistic Regression"
+    "### 4. Merge Data\n",
+    "- Daten zusammenführen\n",
+    "- Jetzt sind für jeden Tag Kursdaten + Durchschnittssentiment in einer gemeinsamen Tabelle"
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "942ffe9031d2077d",
-   "metadata": {},
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "# Beispiel: Pearson-Korrelation zwischen Stimmung & Kursveränderung berechnen"
-   ]
+    "# Merge beider Datensätze anhand des Datums\n",
+    "merged_df = pd.merge(stock_df, daily_sentiment, on='Date', how='inner')"
+   ],
+   "id": "658f4984dee00b4b"
   },
   {
-   "cell_type": "markdown",
-   "id": "2b963d03674e5c63",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "### 5. Evaluation\n",
-    "- Visualisierung mit matplotlib/seaborn/plotly\n",
-    "- Streudiagramm, Zeitreihenvergleich"
-   ]
+    "### 5. Korrelation berechnen\n",
+    "- Korrelation zeigt, ob positive Tweets mit steigenden Kursen einhergehen (+1 = stark positiv)"
+   ],
+   "id": "2b963d03674e5c63"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5e77974748f005c",
-   "metadata": {},
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "# Beispiel: Zeitreihe mit Kurs vs. Stimmung visualisieren"
-   ]
+    "correlation = merged_df[['Avg_Sentiment', 'Close']].corr()\n",
+    "print(\"📊 Korrelation zwischen Sentiment und Schlusskurs:\")\n",
+    "print(correlation)"
+   ],
+   "id": "32f0f8fb9272e5b1"
   },
   {
-   "cell_type": "markdown",
-   "id": "9abddac8f555bd67",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "### 6. Ergebnis & Reporting\n",
-    "- Interpretation der Ergebnisse\n",
-    "- Empfehlung: Lohnt sich Social Media Analyse?\n",
-    "- ggf. Streamlit-Dashboard oder PDF-Bericht"
-   ]
+    "### 6.Visualisierung\n",
+    "\n",
+    "Die Entwicklung des Aktienkurses von Tesla (Close-Preis)\n",
+    "Den durchschnittlichen Sentiment-Wert pro Tag (z. B. aus Twitter-Daten)"
+   ],
+   "id": "25ee8f7866af9c58"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# x-Achse = Datum, y-Achse = Schlusskurs (Close) der Tesla-Aktie, durchschnittliches Sentiment pro Tag (multipliziert mit 100, um auf ähnlicher Skala wie Aktienkurs sichtbar zu sein)\n",
+    "plt.figure(figsize=(12,5)) # Diagramm mit einer Größe von 12 x 5\n",
+    "plt.plot(merged_df['Date'], merged_df['Close'], label='Schlusskurs', color='blue')\n",
+    "plt.plot(merged_df['Date'], merged_df['Avg_Sentiment'] * 100, label='Sentiment (x100)', color='orange')\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.title(\"Tesla: Sentiment vs. Aktienkurs\")\n",
+    "plt.xlabel(\"Datum\")\n",
+    "plt.ylabel(\"Wert\")\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ],
+   "id": "bfa1b43ac76988eb"
   }
  ],
  "metadata": {
