showing data in different plots

--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -169,6 +169,59 @@
     "plt.show()\n"
    ],
    "id": "bfa1b43ac76988eb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "📌 Zeigt die Verteilung der Sentiment-Scores (z. B. wie viele Tweets sind stark negativ, positiv oder neutral).",
+   "id": "7806e64a4762792f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "column_distplot(tweet_df, column_name=\"afinn_score\", bins=10)\n",
+    "column_distplot(tweet_df, column_name=\"vander_score\", bins=10)\n"
+   ],
+   "id": "36cbdbf514fd91d8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "🔹 2. Liniendiagramm: Sentiment vs. Aktienkurs über Zeit\n",
+    "\n",
+    "📌 Visualisiert zeitlich: Wann starke positive oder negative Tweets auftraten und wie sich der Aktienkurs parallel dazu veränderte.\n",
+    "\n"
+   ],
+   "id": "99fcca9a9ac2410f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def sentiment_overtime(tweet_df, stock_df, title, score_column_name=\"score\"):\n",
+    "    fig = plt.figure(figsize=(24,10))\n",
+    "    ax1 = fig.add_subplot()\n",
+    "    ax2 = ax1.twinx()\n",
+    "\n",
+    "    # Sentiment (Vader oder Afinn)\n",
+    "    ax1.vlines(tweet_df['day_date'], 0, tweet_df[score_column_name])\n",
+    "    ax1.axhline(y=0, color='r', linestyle='-')\n",
+    "\n",
+    "    # Aktienkurs (Close)\n",
+    "    ax2.plot(stock_df['day_date'], stock_df['close_value'], color='orange', label='Stock price')\n",
+    "\n",
+    "    ax2.set_title(\"Effects of \" + title +\" tweets to stock price\")\n",
+    "    ax1.set_xlabel('Datum')\n",
+    "    ax1.set_ylabel('Sentiment Score', color=\"blue\")\n",
+    "    plt.show()\n"
+   ],
+   "id": "b13a67b82a675b34"
   }
  ],
  "metadata": {
