--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -593,7 +593,7 @@
     "plt.ylabel(\"Close Value\")\n",
     "plt.legend()\n",
     "plt.title(\"Sentiment vs. Aktienkurs – Vorhersage (AAPL)\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
