--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -239,7 +239,7 @@
     }
    ],
    "source": [
-    "# das sind jetzt die Daten von 2015 bis 2020, weil es davor keine Daten für Tweets gibt\n",
+    "# das sind jetzt die Daten von 2015 bis 2020, weil es davor keine Daten für Tweets gibt.\n",
     "# 1. Datumsspalten korrekt konvertieren\n",
     "company_value['day_date'] = pd.to_datetime(company_value['day_date'])\n",
     "tweet['post_date'] = pd.to_datetime(tweet['post_date'], unit='s', errors='coerce')\n",
