bisschen markdown geändert

--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "4a6f6ad1e42e3504",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# USW-AI-Projekt: Einfluss sozialer Medien auf Aktienkurse\n",
+    "# USW-AI-Projekt: Einfluss von Tweets auf Aktienkurse\n",
     "## CRISP-DM Struktur\n",
     "---"
-   ]
+   ],
+   "id": "d89173e219f17db0"
   },
   {
    "cell_type": "markdown",
@@ -27,9 +27,9 @@
    "metadata": {},
    "source": [
     "### 2. Data Understanding\n",
-    "- Datenquellen: Twitter API v2, yfinance\n",
-    "- Zeitraum: z. B. letzte 3–6 Monate\n",
-    "- Unternehmen: z. B. SAP, Siemens, BMW"
+    "- Datenquellen: Kaggle (Dataset)\n",
+    "- Zeitraum: 2015-2020\n",
+    "- Unternehmen: Google, Apple, Tesla, Microsoft, Amazon"
    ]
   },
   {
@@ -187,7 +187,7 @@
     "\n",
     "# Plot: Verteilung der Sentiment Scores\n",
     "plt.figure(figsize=(12, 5))\n",
-    "sns.histplot(tweet['sentiment_score'], bins=50, kde=True, color='dodgerblue')\n",
+    "sns.histplot(tweet['sentiment_score'], bins=50, color='dodgerblue')\n",
     "plt.title(\"Verteilung der Sentiment Scores (VADER)\")\n",
     "plt.xlabel(\"Sentiment Score\")\n",
     "plt.ylabel(\"Anzahl Tweets\")\n",
