--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -1464,7 +1464,24 @@
    "metadata": {},
    "source": [
     "### 10. Hyperparameteroptimierung mit GridSearchCV\n",
-    "\n"
+    "\n",
+    "- Für den Random Forest Regressor wurde eine Hyperparameteroptimierung mit GridSearchCV durchgeführt\n",
+    "\n",
+    "- Ziel: Verbesserung der Modellleistung durch systematisches Testen mehrerer Parameterkombinationen\n",
+    "\n",
+    "- Verwendete Parameter:\n",
+    "\n",
+    "- n_estimators: Anzahl der Bäume im Wald (z. B. 50, 100, 200)\n",
+    "\n",
+    "- max_depth: maximale Tiefe der Bäume\n",
+    "\n",
+    "- min_samples_split: Mindestanzahl an Samples zur weiteren Aufteilung\n",
+    "\n",
+    "- Bewertungsmetrik: R²-Score mit 5-facher Cross-Validation (cv=5)\n",
+    "\n",
+    "- Ergebnis: Optimiertes Modell mit verbesserten R²-Werten im Vergleich zum Standardmodell\n",
+    "\n",
+    "- Das beste Modell wurde anschließend auf den Testdaten evaluiert und visualisiert"
    ]
   },
   {
@@ -1516,43 +1533,6 @@
     "best_model = grid_search.best_estimator_\n",
     "y_pred = best_model.predict(X_test)\n",
     "print(\"R² auf Testdaten:\", r2_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "612fed4c-85ac-4ff6-8a02-983a9e2f5943",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid non-printable character U+202F (1062139289.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mn_estimators: Anzahl der Bäume im Wald (z. B. 50, 100, 200)\u001b[39m\n                                              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid non-printable character U+202F\n"
-     ]
-    }
-   ],
-   "source": [
-    "Stichpunkte:\n",
-    "\n",
-    "Für den Random Forest Regressor wurde eine Hyperparameteroptimierung mit GridSearchCV durchgeführt\n",
-    "\n",
-    "Ziel: Verbesserung der Modellleistung durch systematisches Testen mehrerer Parameterkombinationen\n",
-    "\n",
-    "Verwendete Parameter:\n",
-    "\n",
-    "n_estimators: Anzahl der Bäume im Wald (z. B. 50, 100, 200)\n",
-    "\n",
-    "max_depth: maximale Tiefe der Bäume\n",
-    "\n",
-    "min_samples_split: Mindestanzahl an Samples zur weiteren Aufteilung\n",
-    "\n",
-    "Bewertungsmetrik: R²-Score mit 5-facher Cross-Validation (cv=5)\n",
-    "\n",
-    "Ergebnis: Optimiertes Modell mit verbesserten R²-Werten im Vergleich zum Standardmodell\n",
-    "\n",
-    "Das beste Modell wurde anschließend auf den Testdaten evaluiert und visualisiert"
    ]
   },
   {
@@ -1692,7 +1672,8 @@
     "ExecuteTime": {
      "end_time": "2025-07-06T21:06:17.508732Z",
      "start_time": "2025-07-06T21:06:15.972956Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
