--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -36,9 +36,7 @@
    "cell_type": "markdown",
    "id": "f13f66d913c5b24b",
    "metadata": {},
-   "source": [
-    "- Daten vorbereiten & alle nötigen Libaries laden\n"
-   ]
+   "source": "Daten vorbereiten & alle nötigen Libaries laden\n"
   },
   {
    "cell_type": "code",
@@ -156,6 +154,12 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Zeigt die Verteilung der Sentiment-Scores (z. B. wie viele Tweets sind stark negativ, positiv oder neutral).\n",
+   "id": "3d9f15f83ad039e1"
   },
   {
    "cell_type": "code",
@@ -1218,27 +1222,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "18152ece-ba5f-4e5d-a0d5-41b93d165c49",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-06T21:05:19.901444Z",
-     "start_time": "2025-07-06T21:05:19.896618Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '²' (U+00B2) (3185846582.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m| Ticker | R²-Score | MSE | Interpretation |\u001b[39m\n                ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '²' (U+00B2)\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "58c2536527f186e4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "## Auswertung der Regressionsergebnisse\n",
+    "### Auswertung der Regressionsergebnisse\n",
     "\n",
     "| Ticker | R²-Score | MSE | Interpretation |\n",
     "|--------|----------|-----|----------------|\n",
@@ -1249,7 +1242,8 @@
     "| TSLA   | 0.00     | 2266 | praktisch kein Zusammenhang |\n",
     "\n",
     "**Fazit:** AAPL zeigt die stärkste lineare Beziehung zwischen Sentiment und Aktienkurs, während TSLA und GOOGL kaum vorhersagbare Zusammenhänge aufweisen.\n"
-   ]
+   ],
+   "id": "cee56853888428d8"
   },
   {
    "cell_type": "markdown",
@@ -1267,14 +1261,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1933e24-1c69-4503-bed6-8d8a9a5afd4c",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "##Statt linearer Regression testen wir ein nicht-lineares Modell: RandomForestRegressor, das auch komplexe Beziehungen erkennt."
-   ]
+   "cell_type": "markdown",
+   "source": "- Statt linearer Regression testen wir ein nicht-lineares Modell: RandomForestRegressor, das auch komplexe Beziehungen erkennt.\n",
+   "id": "dbab7ad292587dc0"
   },
   {
    "cell_type": "code",
@@ -1759,42 +1749,6 @@
     "    plt.grid(True)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7806e64a4762792f",
-   "metadata": {},
-   "source": [
-    "Zeigt die Verteilung der Sentiment-Scores (z. B. wie viele Tweets sind stark negativ, positiv oder neutral)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "36cbdbf514fd91d8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-06T21:06:23.715388Z",
-     "start_time": "2025-07-06T21:06:23.678086Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'column_distplot' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcolumn_distplot\u001b[49m(tweet_df, column_name=\u001b[33m\"\u001b[39m\u001b[33mafinn_score\u001b[39m\u001b[33m\"\u001b[39m, bins=\u001b[32m10\u001b[39m)\n\u001b[32m      2\u001b[39m column_distplot(tweet_df, column_name=\u001b[33m\"\u001b[39m\u001b[33mvander_score\u001b[39m\u001b[33m\"\u001b[39m, bins=\u001b[32m10\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'column_distplot' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "column_distplot(tweet_df, column_name=\"afinn_score\", bins=10)\n",
-    "column_distplot(tweet_df, column_name=\"vander_score\", bins=10)\n"
    ]
   },
   {
