--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -36,7 +36,9 @@
    "cell_type": "markdown",
    "id": "f13f66d913c5b24b",
    "metadata": {},
-   "source": "Daten vorbereiten & alle nötigen Libaries laden\n"
+   "source": [
+    "Daten vorbereiten & alle nötigen Libaries laden\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -156,10 +158,12 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Zeigt die Verteilung der Sentiment-Scores (z. B. wie viele Tweets sind stark negativ, positiv oder neutral).\n",
-   "id": "3d9f15f83ad039e1"
+   "id": "3d9f15f83ad039e1",
+   "metadata": {},
+   "source": [
+    "Zeigt die Verteilung der Sentiment-Scores (z. B. wie viele Tweets sind stark negativ, positiv oder neutral).\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1222,14 +1226,15 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "",
-   "id": "58c2536527f186e4"
+   "id": "58c2536527f186e4",
+   "metadata": {},
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "cee56853888428d8",
+   "metadata": {},
    "source": [
     "### Auswertung der Regressionsergebnisse\n",
     "\n",
@@ -1242,8 +1247,7 @@
     "| TSLA   | 0.00     | 2266 | praktisch kein Zusammenhang |\n",
     "\n",
     "**Fazit:** AAPL zeigt die stärkste lineare Beziehung zwischen Sentiment und Aktienkurs, während TSLA und GOOGL kaum vorhersagbare Zusammenhänge aufweisen.\n"
-   ],
-   "id": "cee56853888428d8"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1261,10 +1265,12 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "- Statt linearer Regression testen wir ein nicht-lineares Modell: RandomForestRegressor, das auch komplexe Beziehungen erkennt.\n",
-   "id": "dbab7ad292587dc0"
+   "id": "dbab7ad292587dc0",
+   "metadata": {},
+   "source": [
+    "- Statt linearer Regression testen wir ein nicht-lineares Modell: RandomForestRegressor, das auch komplexe Beziehungen erkennt.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1808,6 +1814,126 @@
     "    ax1.set_xlabel('Datum')\n",
     "    ax1.set_ylabel('Sentiment Score', color=\"blue\")\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92b7a561-21c6-424f-8915-98e999d51b17",
+   "metadata": {},
+   "source": [
+    "### 13. Evaluation\n",
+    "- Unternehmensliste definiert: ['AAPL', 'AMZN', 'GOOGL', 'GOOG', 'MSFT', 'TSLA']\n",
+    "\n",
+    "- Toleranzgrenze festgelegt: ±10 $\n",
+    "\n",
+    "- Für jedes Unternehmen:\n",
+    "\n",
+    "- Datensatz geladen (merged_data[unternehmen])\n",
+    "\n",
+    "- Features (sentiment_score) und Ziel (close_value) extrahiert\n",
+    "\n",
+    "- Daten in Trainings- und Testset aufgeteilt (test_size=0.99 = fast alles ist Testdaten)\n",
+    "\n",
+    "- RandomForestRegressor trainiert mit 100 Bäumen\n",
+    "\n",
+    "- Vorhersage auf Testdaten berechnet\n",
+    "\n",
+    "- Abweichung berechnet (abs(y_test - y_pred))\n",
+    "\n",
+    "- Anzahl der Vorhersagen innerhalb ±10 $ gezählt\n",
+    "\n",
+    "- Trefferquote in % ermittelt\n",
+    "\n",
+    "- R²-Score als Gütemaß der Regression ausgegeben\n",
+    "\n",
+    "- Ergebnisse pro Unternehmen als Text ausgegeben"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8d2f002d-207f-4a71-a745-4de037aaba0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " AAPL\n",
+      "- Vorhersagen innerhalb ±10$: 481 von 1800\n",
+      "- Trefferquote: 26.72%\n",
+      "- R²-Score: 0.1492\n",
+      "\n",
+      " AMZN\n",
+      "- Vorhersagen innerhalb ±10$: 19 von 1807\n",
+      "- Trefferquote: 1.05%\n",
+      "- R²-Score: -0.3483\n",
+      "\n",
+      " GOOGL\n",
+      "- Vorhersagen innerhalb ±10$: 74 von 1807\n",
+      "- Trefferquote: 4.10%\n",
+      "- R²-Score: -0.2675\n",
+      "\n",
+      " GOOG\n",
+      "- Vorhersagen innerhalb ±10$: 57 von 1806\n",
+      "- Trefferquote: 3.16%\n",
+      "- R²-Score: -0.8077\n",
+      "\n",
+      " MSFT\n",
+      "- Vorhersagen innerhalb ±10$: 608 von 1807\n",
+      "- Trefferquote: 33.65%\n",
+      "- R²-Score: -0.1808\n",
+      "\n",
+      " TSLA\n",
+      "- Vorhersagen innerhalb ±10$: 210 von 1807\n",
+      "- Trefferquote: 11.62%\n",
+      "- R²-Score: -0.4788\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Unternehmen\n",
+    "firmen = ['AAPL', 'AMZN', 'GOOGL', 'GOOG', 'MSFT', 'TSLA']\n",
+    "\n",
+    "# Toleranzschwelle (z. B. ±10 $)\n",
+    "toleranz = 10\n",
+    "\n",
+    "# Ergebnisse sammeln\n",
+    "for firma in firmen:\n",
+    "    print(f\"\\n {firma}\")\n",
+    "    df = merged_data[firma]\n",
+    "    X = df[['sentiment_score']]\n",
+    "    y = df['close_value']\n",
+    "\n",
+    "    # Aufteilen in Trainings- und Testdaten\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.99, random_state=42)\n",
+    "\n",
+    "    # Modell trainieren\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Vorhersage\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    # Auswertung: Wie viele Vorhersagen liegen innerhalb der Toleranz?\n",
+    "    fehler = np.abs(y_test - y_pred)\n",
+    "    korrekte = (fehler <= toleranz).sum()\n",
+    "    gesamt = len(y_test)\n",
+    "    anteil = korrekte / gesamt\n",
+    "\n",
+    "    # R²-Score zur Referenz\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "    # Ergebnis ausgeben\n",
+    "    print(f\"- Vorhersagen innerhalb ±{toleranz}$: {korrekte} von {gesamt}\")\n",
+    "    print(f\"- Trefferquote: {anteil:.2%}\")\n",
+    "    print(f\"- R²-Score: {r2:.4f}\")\n"
    ]
   }
  ],
