business understanding update

--- a/notebooks/usw_sentiment_stocks.ipynb
+++ b/notebooks/usw_sentiment_stocks.ipynb
@@ -5,7 +5,7 @@
    "id": "d89173e219f17db0",
    "metadata": {},
    "source": [
-    "# USW-AI-Projekt: Einfluss von Tweets auf Aktienkurse\n",
+    "# USW-AI-Projekt: Vorhersage von Aktienkursen auf Basis von Twitter-Sentiment\n",
     "## CRISP-DM Struktur\n",
     "---"
    ]
@@ -16,9 +16,15 @@
    "metadata": {},
    "source": [
     "### 1. Business Understanding\n",
-    "- Ziel: Zusammenhang zwischen Twitter-Stimmung und Aktienkursentwicklung untersuchen\n",
-    "- Zielgruppe: Finanzanalysten, Anleger\n",
-    "- Fragestellung: Kann man Kursbewegungen durch Stimmung erklären oder sogar vorhersagen?"
+    "Ziel des Projekts: Untersuchung des Zusammenhangs zwischen Twitter-Sentiment und kurzfristiger Kursentwicklung von Aktien\n",
+    "\n",
+    "Zielgruppe: Privatanleger, Analysten, Trading-Tools, die Social Media als Informationsquelle nutzen\n",
+    "\n",
+    "Zentrale Fragestellung:\n",
+    "\n",
+    "Kann man Kursbewegungen anhand von Tweetsentiment erklären oder sogar vorhersagen?\n",
+    "\n",
+    "Potenzieller Nutzen: Früherkennung von Stimmungen → Grundlage für Investmententscheidungen oder Warnsysteme"
    ]
   },
   {
@@ -1788,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "b13a67b82a675b34",
    "metadata": {
     "ExecuteTime": {
@@ -1953,7 +1959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
